docs for delete()
